updates profile and message list

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -47,14 +47,21 @@ body {
 
 /*STUB Profile Page */
 
+
 .card-profile-img {
-  display: block;
-  margin: 10px auto;
-  width: 75%;
-  height: 75%;
+
+  margin: 30px auto;
+  width: 60%;
+  height: 60%;
   border-radius: 50%;
-  border: 10px solid rgba(245, 245, 245, 0.952);
+  border: 5px solid rgba(245, 245, 245, 0.952);
+
 }
+
+.profile-gradient {
+  background: -webkit-gradient(linear, left top, right top, from(#ee5a6f), to(#f29263));
+}
+
 
 
 
