--- a/views/0-partials/message/new-message.ejs
+++ b/views/0-partials/message/new-message.ejs
@@ -1,3 +1,9 @@
+
+<!-- 
+Bootstrap 3.0.0 Snippet base by msurguy
+https://bootsnipp.com/snippets/9gW
+-->
+
 <div class="container">
     <div class="row">
                 
