--- a/views/0-partials/profile/card.ejs
+++ b/views/0-partials/profile/card.ejs
@@ -4,10 +4,10 @@
 
 
         <!-- STUB profile picture -->
-        <div class="col-md-4 home-paragraph">
+        <div class="col-md-4 ">
             <div class="container">
 
-                <div class="card shadow-lg ml-5 mt-4 rounded" 
+                <div class="card shadow-lg ml-5 mt-4 rounded profile-gradient" 
                     style="width: 20rem;">
                     <img src="/assets/flaticon/user.svg" 
                     class="card-profile-img" 
@@ -16,12 +16,12 @@
             </div>
         </div>
 
-        
+
         <!-- STUB Personal info -->
         <div class="col-md-7 home-paragraph" >
             <div class="container">
 
-                <div class="card shadow-lg ml-4 mt-4 rounded" 
+                <div class="card-block shadow-lg ml-4 mt-4 rounded" 
                     style="width: 25rem;">
                     <div class="card-body">
                         <h4 class="card-title">
