--- a/public/styles/profile-card.css
+++ b/public/styles/profile-card.css
@@ -11,10 +11,8 @@ body {
 }
 
 .card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
-    box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
-    border: none;
+    border-radius: 20px;
+
     margin-bottom: 30px
 }
 
@@ -30,9 +28,10 @@ body {
     border-radius: 5px 0 0 5px
 }
 
+
 .bg-c-lite-green {
-    background: -webkit-gradient(linear, left top, right top, from(#f29263), to(#ee5a6f));
-    background: linear-gradient(to right, #ee5a6f, #f29263)
+    background: -webkit-gradient(linear, left top, right top, from(#ee5a6f), to(#f29263));
+    /* background: linear-gradient(to right, #ee5a6f, #f29263) */
 }
 
 .user-profile {
@@ -43,9 +42,9 @@ body {
     padding: 1.25rem
 }
 
-.m-b-25 {
+/* .m-b-25 {
     margin-bottom: 25px
-}
+} */
 
 .img-radius {
     border-radius: 5px
