--- a/views/0-partials/profile/new-card.ejs
+++ b/views/0-partials/profile/new-card.ejs
@@ -1,14 +1,24 @@
 <div class="page-content page-container" id="page-content">
     <div class="padding">
-        <div class="row container d-flex justify-content-center">
-            <div class="col-xl-6 col-md-12">
+        <div class="row container justify-content-center">
+            <div class="col-md-6 col-md-10">
                 <div class="card user-card-full">
                     <div class="row m-l-0 m-r-0">
+                        
                         <div class="col-sm-4 bg-c-lite-green user-profile">
                             <div class="card-block text-center text-white">
-                                <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
-                                <h6 class="f-w-600">Hembo Tingor</h6>
-                                <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                                
+                                <div class="m-b-25"> 
+                                    <img src="https://img.icons8.com/bubbles/100/000000/user.png" 
+                                        class="img-radius" 
+                                        alt="User-Profile-Image"> 
+                                </div>
+                                <h6 class="f-w-600">
+                                    Hembo Tingor
+                                </h6>
+                                <p>
+                                    Web Designer
+                                </p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                             </div>
                         </div>
                         <div class="col-sm-8">
@@ -48,3 +58,5 @@
         </div>
     </div>
 </div>
+
+
