--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -10,11 +10,11 @@
                     Welcome to Grapevine
                 </h1>
                 <p class="lead">
-                    The place where job seekers can easily identify who they need to connect with to find their dream. Grapevine users are people who are distinctly receptive and wanting to network online.
+                    The place where job seekers can help each other find out about new opportunities. Create a message with a link to the job you've found that you think others might find interesting. Within each message you and your cluster can talk about specifics related to the job message such as highlights, red flags, or areas to ask for further information.
                 </p>
                 <hr class="my-4">
                 <p>
-                    With Grapevine you'll feel motivated to grow your network.
+                    With Grapevine you'll find the perfect job and grow your network along the way.
                 </p>
                 <p class="lead">
                     <a class="btn btn-info btn-lg" href="/" role="button">
