--- a/views/0-partials/landing/values.ejs
+++ b/views/0-partials/landing/values.ejs
@@ -10,7 +10,7 @@
                 <h5 class="card-title">
                     Vision
                 </h5>
-                Make online networking for job seeking professionals more transparent and humane.
+                Create a place where job seekers can find solidarity and support in searching for their next job.
             </div>
         </div>
 
@@ -21,7 +21,7 @@
                 <h5 class="card-title">
                     Mission
                 </h5>
-                Grapevine's mission is simple: create a platform where job seeking professionals can easily identify who to connect with from each company. 
+                Help people help each other find work and grow their network and impact along the way.
             </div>
         </div>
 
