--- a/views/0-partials/message/new-message.ejs
+++ b/views/0-partials/message/new-message.ejs
@@ -30,7 +30,7 @@ https://bootsnipp.com/snippets/9gW
                     <!-- STUB new message button -->
                     <button type="submit" 
                         class="btn btn-sm btn-info">
-                        Post!
+                        Create Message!
                     </button>
 
                     <!-- STUB cancel button -->
