--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -11,14 +11,14 @@
                 <form action="/messages" 
                 method="POST">
                     <p>
-                        <%= message.content %>
+                        <%= foundmessage.content %>
                     </p>
                     
                     
                     <!-- STUB new message button -->
                     <button type="submit" 
                         class="btn btn-sm btn-info">
-                        Edit Post
+                        Edit Message
                     </button>
 
                     <!-- STUB cancel button -->
