--- a/views/message-pages/index.ejs
+++ b/views/message-pages/index.ejs
@@ -15,7 +15,7 @@
     <!-- STUB main -->
     <main class="main">
 
-        <!-- STUB list messages -->
+        <!-- STUB list Messages -->
         <%- include ("../0-partials/message/index-message.ejs") -%>
 
 
