--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>New Message</title>
+    <title>New message</title>
 </head>
 
 
@@ -16,7 +16,7 @@
     <!-- STUB main -->
     <main class="main">
         
-        <!-- STUB Message form -->
+        <!-- STUB message form -->
         <%- include ("../0-partials/message/new-message.ejs") -%>
 
     </main>
