adds edit route to browser

--- a/views/0-partials/landing/values.ejs
+++ b/views/0-partials/landing/values.ejs
@@ -21,7 +21,7 @@
                 <h5 class="card-title">
                     Mission
                 </h5>
-                Help people help each other find work and grow their network and impact along the way.
+                Help people help each other find work, and increase their network and impact along the way.
             </div>
         </div>
 
