--- a/views/message-pages/edit.ejs
+++ b/views/message-pages/edit.ejs
@@ -14,7 +14,12 @@
 
 
     <!-- STUB main -->
-    <main class="main">Edit One</main>
+    <main class="main">
+        
+        <!-- STUB edit message -->
+        <%- include ("../0-partials/message/edit-message.ejs") -%>
+
+    </main>
     
 
     <!--STUB Footer -->
