--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -7,25 +7,33 @@
             <div class="card-header alert alert-light">
                 Show Message
             </div>
+
+            <!-- STUB message content -->
             <div class="card-body">                
                 <form action="/messages" 
                 method="POST">
                     <p>
-                        <%= foundmessage.content %>
+                        <%= foundMessage.content %>
                     </p>
                     
                     
                     <!-- STUB new message button -->
-                    <button type="submit" 
+                    <a href="/messages/<%= foundMessage._id %>/edit" 
                         class="btn btn-sm btn-info">
                         Edit Message
-                    </button>
+                    </a>
 
                     <!-- STUB cancel button -->
                     <a href="/messages" 
                         class="btn btn-sm btn-secondary"> 
                         Cancel
                     </a>
+
+                    <!-- STUB delete button -->
+                    <form action="/messages/<%= foundMessage._id %>?_method=DELETE"
+                            method="POST">
+                        <input type="submit" class="btn btn-sm btn-danger" value="Delete" />
+                    </form>
                 </form>
             </div>
         </div>
