fixes delete and adds update

--- a/views/0-partials/message/edit-message.ejs
+++ b/views/0-partials/message/edit-message.ejs
@@ -18,8 +18,7 @@
                         name="content" 
                         placeholder="new message" 
                         rows="3" 
-                        style="margin-bottom:30px;">
-                    </textarea>
+                        style="margin-bottom:30px;"></textarea>
                     <h6 class="pull-right">
                         300 characters max.
                     </h6>
