--- a/views/0-partials/message/new-message.ejs
+++ b/views/0-partials/message/new-message.ejs
@@ -13,15 +13,15 @@ https://bootsnipp.com/snippets/9gW
             <div class="card-header alert alert-info">
                 New Post
             </div>
+
+            <!-- STUB form body -->
             <div class="card-body">                
                 <form action="/messages" 
                 method="POST">
                     <textarea class="form-control" 
                         name="content" 
-                        placeholder="Type in your message" 
                         rows="3" 
-                        style="margin-bottom:30px;">
-                    </textarea>
+                        style="margin-bottom:30px;"></textarea>
                     <h6 class="pull-right">
                         300 characters max.
                     </h6>
