--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -10,8 +10,7 @@
 
             <!-- STUB message content -->
             <div class="card-body">                
-                <form action="/messages" 
-                method="POST">
+                
                     <p>
                         <%= foundMessage.content %>
                     </p>
@@ -30,11 +29,10 @@
                     </a>
 
                     <!-- STUB delete button -->
-                    <form action="/messages/<%= foundMessage._id %>?_method=DELETE"
-                            method="POST">
-                        <input type="submit" class="btn btn-sm btn-danger" value="Delete" />
+                    <form action="/messages/<%= foundMessage._id %>?_method=DELETE" method="POST">
+                        <input type="submit" class="btn btn-sm btn-danger pull-right" value="Delete" />
                     </form>
-                </form>
+                
             </div>
         </div>
             
