adds more props message model

--- a/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
+++ b/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
@@ -18,7 +18,7 @@
         </a>
         <a class="dropdown-item" 
             href="/messages">
-            Mailbox
+            Job Posts
         </a>
 
         <div class="dropdown-divider">         
