--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -17,7 +17,7 @@
                     With Grapevine you'll find the perfect job and grow your network along the way.
                 </p>
                 <p class="lead">
-                    <a class="btn btn-info btn-lg" href="/" role="button">
+                    <a class="btn btn-info btn-lg" href="/messages" role="button">
                         Get started
                     </a>
                 </p>
