--- a/views/0-partials/message/index-message.ejs
+++ b/views/0-partials/message/index-message.ejs
@@ -34,7 +34,7 @@
                 </ul>
                 <p>
                     <% if(allMessages.length === 0) { %>
-                        You have no messages!
+                        There are no posts. Get Postin'! 
                     <% }%>
                 </p>
             
