--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -2,21 +2,21 @@
     <div class="row">
                 
         <!-- STUB Header -->
-        <div class="card shadow-lg ml-5 mt-4 rounded" 
+        <div class="card shadow-lg ml-5 mt-4 rounded " 
             style="width: 40rem;">
-            <div class="card-header alert alert-light">
-                Show Message
+            <div class="card-header alert alert-info">
+                Post Information
             </div>
 
             <!-- STUB message content -->
             <div class="card-body">                
+                <p>
+                    Content: <br>
+                    <%= foundMessage.content %>
+                </p>
                 
-                    <p>
-                        <%= foundMessage.content %>
-                    </p>
-                    
-                    
-                    <!-- STUB new message button -->
+                <!-- STUB new message button -->
+                <div class=" p-2">
                     <a href="/messages/<%= foundMessage._id %>/edit" 
                         class="btn btn-sm btn-info">
                         Edit Message
@@ -32,6 +32,7 @@
                     <form action="/messages/<%= foundMessage._id %>?_method=DELETE" method="POST">
                         <input type="submit" class="btn btn-sm btn-danger pull-right" value="Delete" />
                     </form>
+                </div>
                 
             </div>
         </div>
