updates all message views

--- a/views/0-partials/headers-sum/navbar/modal-login.ejs
+++ b/views/0-partials/headers-sum/navbar/modal-login.ejs
@@ -50,15 +50,15 @@
                     <!-- STUB modal footer -->
                     <div class="modal-footer">
 
-                        <!--STUB Existing Member -->
-                        <p class="subtitle has-text-grey modal-dialog">
+                        <!--STUB Existing Member - (off) -->
+                        <!-- <p class="subtitle has-text-grey modal-dialog">
                             New to Grapevine?
                             <a href="registerModal"
                             data-toggle="modal"
                             class="button is-link">
                                 Register
                             </a>
-                        </p>
+                        </p> -->
 
                         <!-- STUB close button -->
                         <button type="button" 
