--- a/views/0-partials/message/index-message.ejs
+++ b/views/0-partials/message/index-message.ejs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="card shadow-lg ml-5 mt-4" 
-            style="width: 40rem;">
+            style="width: 50rem;">
 
             <!-- STUB card header -->
             <div class="card-header alert alert-info">
@@ -16,22 +16,27 @@
         
             <!-- STUB list messages -->
             <form class="card-body">
-                <p>
-                    Stay up to date with what everyone's talking about. 
-                    <br />
-                    <strong>
-                        Check a job post out.
-                    </strong>
+                <h6>
+                    Stay up to date with what everyone's talking about.
+                </h6>
+                <br />
+                    Check out a job post. If you see something worth noting, have information on the company, or position, then add a note to help other users!
                 </p>
                 <ul class="list-group">
                     <% allMessages.forEach(message => { %>
                         <li class="list-group-item">
+                            <small>
+                                <%= message.createdAt%>
+                            </small>
+                            <br/> 
                             <a href="/messages/<%= message._id %>"> 
-                                <%= message.content%> 
+                                <%= message.jobRole%> @  <%= message.company%> 
                             </a>
+                            
                         </li>
                     <% }) %>
                 </ul>
+                <hr class="my-2"/>
                 <p>
                     <% if(allMessages.length === 0) { %>
                         There are no posts. Get Postin'! 
