--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -49,29 +49,30 @@
             </div>
         </div>
 
-    </div>
-</div>
-
-
-<!-- STUB About -->
-<div class="col-md-12 landing-page-nav-body">
-    <div class="row">
-
-        <div class="col-md-10 home-paragraph" >
-            <div class="container">
-
-                <div class="card shadow-lg  mt-4 rounded" 
-                    style="width: 50rem;">
-                    <div class="card-body profile-body">
-                        Introduction
+        
+        
+        <!-- STUB About -->
+            <div class="col-md-12 landing-page-nav-body">
+                <div class="row">
+                    
+                    <div class="col-md-10 home-paragraph" >
+                        <div class="container">
+                            
+                            <div class="card shadow-lg  mt-4 rounded" 
+                            style="width: 50rem;">
+                            <div class="card-body profile-body">
+                                Introduction
+                            </div>
+                        </div>
+                        <a href="#" 
+                            class="btn btn-sm btn-info"> 
+                            Edit Profile
+                        </a>
                     </div>
                 </div>
-                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#profileEditModal">
-                    Edit
-                </button>
+            
+                
             </div>
         </div>
-
-        
     </div>
 </div>
