--- a/views/0-partials/headers-sum/navbar/modal-register.ejs
+++ b/views/0-partials/headers-sum/navbar/modal-register.ejs
@@ -59,8 +59,11 @@
                             name="password" 
                             maxlength="25" 
                             minlength="4"
-                            placeholder="25 characters max. 4 characters min required."
+                            placeholder="required"
                             required>
+                        <small id="emailHelp" class="form-text text-muted">
+                            25 characters max. 4 characters min required.
+                        </small>
                     </p>
 
                     <!-- STUB confirm password -->
@@ -98,7 +101,7 @@
                         <button type="submit" 
                             class="btn btn-info">
                             Join
-                        </button <input type="hidden" name="next" value="{{ next }}">
+                        </button>
                         
                     </div>
 
