--- a/views/0-partials/headers-sum/navbar/modal-register.ejs
+++ b/views/0-partials/headers-sum/navbar/modal-register.ejs
@@ -32,7 +32,7 @@
 
             <!--STUB register form  -->
             <form method="POST" 
-                action="/">
+                action="/user/register">
                 <div class="modal-body">
                     
 
