--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -11,7 +11,7 @@
                 </h1>
                 <br />
                 <p class="lead">
-                    The place where job seekers can help each other find out about new opportunities. Create a message with a link to the job you've found that you think others might find interesting. Within each message you and your cluster can talk about specifics related to the job message such as highlights, red flags, or areas to ask for further information.
+                    The place where job seekers can help each other find out more about new opportunities. Create a message with a link to the job you've found that you think others might find helpful. Within each message you and your cluster can talk about specifics related to the job post such as highlights, red flags, or areas to ask for further information.
                 </p>
                 <hr class="my-4">
                 <p>
