--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -1,78 +1,50 @@
 
-<div class="md-12 landing-page-nav-body">
+<div class="container">
     <div class="row">
 
+        <!-- STUB left-side col -->
+        <div class="col-8">
 
-        <!-- STUB profile picture -->
-        <div class="col-md-4 ">
-            <div class="container">
-
-                <div class="card shadow-lg ml-5 mt-4 rounded profile-gradient" 
-                    style="width: 20rem;">
-                    <img src="/assets/flaticon/user.svg" 
-                    class="card-profile-img" 
-                    alt="profile picture">
-                </div>
-            </div>
         </div>
 
+        <!-- STUB right-side col -->
+        <div class="col-4">
+            <br />
 
-        <!-- STUB Personal info -->
-        <div class="col-md-7 home-paragraph" >
-            <div class="container">
+            <!-- STUB profile card -->
+            <div class="text-center">
+                <div class="container">
 
-                <div class="card-block shadow-lg ml-4 mt-4 rounded" 
-                    style="width: 25rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            Name: 
-                        </h4>
-                        <hr class="my-2" />
-                        <div class="card-content">
-                            <br />
-                            <h6>
-                                Current Position:
-                            </h6>
-                            <br />
-                            <h6>
-                                Company:
-                            </h6>
-                            <br />
-                            <h6>
-                                Location:
-                            </h6>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        
-        
-        <!-- STUB About -->
-            <div class="col-md-12 landing-page-nav-body">
-                <div class="row">
+                    <!-- STUB profile picture -->
+                    <div class="card shadow-lg ml-5 mt-4 rounded profile-gradient" 
+                        style="width: 20rem;">
+                        <img src="/assets/flaticon/user.svg" 
+                            class="card-profile-img" 
+                            alt="profile picture" />
                     
-                    <div class="col-md-10 home-paragraph" >
-                        <div class="container">
-                            
-                            <div class="card shadow-lg  mt-4 rounded" 
-                            style="width: 50rem;">
-                            <div class="card-body profile-body">
-                                Introduction
-                            </div>
+                        <!-- STUB card information -->
+                        <div class="card-profile-info">
+                            <h4 class="card-title">
+                                username: 
+                            </h4>
+                            <h6>
+                                jobRole:  
+                                <br />
+                                company
+                                <br />
+                                location
+                            </h6>
+                            <br />
                         </div>
-                        <a href="#" 
-                            class="btn btn-sm btn-info"> 
-                            Edit Profile
-                        </a>
+                            <a href="#" 
+                                class="btn btn-md btn-info"> 
+                                Edit Profile
+                            </a>
                     </div>
                 </div>
-            
-                
             </div>
         </div>
+
+
     </div>
 </div>
