links to login page successfully

--- a/views/0-partials/headers-sum/footer.ejs
+++ b/views/0-partials/headers-sum/footer.ejs
@@ -1,17 +1,20 @@
 
-<footer class="card-footer" id="headers-color">
+<footer class="card-footer" 
+    id="headers-color">
     <div class="content has-text-centered">
         <div class="clearfix">
 
-            <!-- Link -->
+            <!-- STUB linkedin link -->
             <ul class="nav-item active ">
-                <a class="nav-link text-light float-right" 
-                    href="https://www.linkedin.com/in/rodrigo-marron/">
-                        Grapevine by Rodrigo Marrón
-                    <img src="/assets/flaticon/linkedin.png" 
-                        alt="linkedin-icon" 
-                        id="linkedin" />
-                </a>
+                <small>
+                    <a class="nav-link text-light float-right" 
+                        href="https://www.linkedin.com/in/rodrigo-marron/">
+                        Grapevine ©2020 by Rodrigo Marrón
+                        <img src="/assets/flaticon/linkedin.png" 
+                            alt="linkedin-icon" 
+                            id="linkedin" />
+                    </a>
+                </small>
             </ul>
         </div>
         <br />
