--- a/views/0-partials/headers-sum/navbar/brand-name.ejs
+++ b/views/0-partials/headers-sum/navbar/brand-name.ejs
@@ -1,9 +1,10 @@
 <!-- navbar logo -->
 <div id="logo-name">
-    <a 
-        class="navbar-brand text-light"
+    <a class="navbar-brand text-light"
         href="/">
-        <img src="/assets//logo/grapevine_grapevine.svg" alt="grapevine logo" id="navbar-logo">
+        <img src="/assets//logo/grapevine_grapevine.svg" 
+            alt="grapevine logo" 
+            id="navbar-logo" />
         <strong> 
             Grapevine
         </strong>
