--- a/views/0-partials/headers-sum/navbar/modal-register.ejs
+++ b/views/0-partials/headers-sum/navbar/modal-register.ejs
@@ -31,11 +31,10 @@
             </div> -->
 
             <!--STUB register form  -->
-            <form method="POST" 
-                action="/user/register">
+            <form action="/user/register" 
+                method="POST">
                 <div class="modal-body">
                     
-
                     <!-- STUB email -->
                     <p>
                         <label for="email">Email:</label>
