--- a/views/message-pages/index.ejs
+++ b/views/message-pages/index.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>All Messages</title>
+    <title>Gv |All Posts</title>
 </head>
 
 
