--- a/views/user-pages/login.ejs
+++ b/views/user-pages/login.ejs
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
-
-    <title>New User</title>
+    <title>Gv |Log in</title>
 </head>
 
-
 <body>
-    <!-- STUB navbar -->
+    <!-- STUB NavBar -->
     <%- include ("../0-partials/headers-sum/navbar.ejs") -%>
-    
-    <!-- STUB main -->
+
+
     <main class="main">
-
-    <p>New User</p>
-
-
+        <!-- STUB login form -->
+        <%- include ("../0-partials/user/login.ejs") -%>
     </main>
 
-    
-    <!--STUB Footer -->
+    <!-- STUB Footer -->
     <%- include ("../0-partials/headers-sum/footer.ejs") -%>
-
-    
 </body>
+
+
 </html>
