--- a/views/0-partials/headers-sum/navbar.ejs
+++ b/views/0-partials/headers-sum/navbar.ejs
@@ -15,9 +15,6 @@
                 <a class="nav-link text-light" 
                     href="/"> 
                     Home 
-                    <span class="sr-only"> 
-                        (current) 
-                    </span>
                 </a>
             </li>
 
@@ -47,8 +44,7 @@
             <li class="nav-item">
                 <a type="submit" 
                     class="nav-link text-light" 
-                    data-toggle="modal" 
-                    data-target="#loginModal">
+                    href="/user/login">
                     Log in
                 </a>
             </li>
@@ -68,7 +64,5 @@
     <!---STUB Modal- register -->
     <%- include("./navbar/modal-register.ejs") -%>
 
-    <!-- STUB Modal- log in -->
-    <%- include("./navbar/modal-login.ejs") -%>
 
 </nav>
