--- a/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
+++ b/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
@@ -21,11 +21,11 @@
             Job Posts
         </a>
 
-        <div class="dropdown-divider">         
+        <!-- <div class="dropdown-divider">         
         </div>
         <a class="dropdown-item" 
             href="#">
             Search Grapevine
-        </a>
+        </a> -->
     </div>
 </li>
