--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -18,8 +18,12 @@
                     With Grapevine you'll find the perfect job and grow your network along the way.
                 </p>
                 <p class="lead">
-                    <a class="btn btn-info btn-lg" href="/messages" role="button">
-                        Get started
+                    <a type="submit" 
+                        class="btn btn-md btn-info" 
+                        data-toggle="modal"
+                        data-target="#registerModal"
+                        style="color: rgba(245, 245, 245, 0.952)">
+                        Get Started
                     </a>
                 </p>
             </div>
@@ -36,6 +40,8 @@
     </div>
     
 </div>
-<br /><br /><br />
+<br />
+<br />
+<br />
 
 
