--- a/views/landing-page.ejs
+++ b/views/landing-page.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("./0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>Grapevine | Home</title>
+    <title>Gv |Home</title>
 </head>
 
 <body>
