--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>New message</title>
+    <title>Gv |New Post</title>
 </head>
 
 
