--- a/views/message-pages/show.ejs
+++ b/views/message-pages/show.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>Show Message</title>
+    <title>Gv |View Post</title>
 </head>
 
 
